Scan QR and display qr to text on next page

--- a/Ionic/ImageUploader/src/app/home/home.page.html
+++ b/Ionic/ImageUploader/src/app/home/home.page.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Image Uploader
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  <div class="ion-padding ion-text-center">
+    <h2>Hello!</h2>
+    <p>Thanks for using Image Uploader. With this app you can scan a QR-code and then u can snap a picture and decide if you want to upload an image to the URL in the QR-code.</p>
+    <ion-button href="/scanner" color="primary">Let's Get Scanning!</ion-button>
   </div>
 </ion-content>
