--- a/Ionic/ImageUploader/src/app/images/images.page.html
+++ b/Ionic/ImageUploader/src/app/images/images.page.html
@@ -7,7 +7,12 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let image of images">
-      <ion-label>{{ image.name }}</ion-label>
+      <ion-thumbnail>
+        <img [src]="image.urlPath" alt="Image">
+      </ion-thumbnail>
+      <ion-label class="ion-padding-start">{{ image.name }}</ion-label>
+      <ion-icon name="cloud-upload" (click)="uploadImage(image)"></ion-icon>
+      <ion-icon class="ion-padding-start" name="trash" (click)="deleteImage(image.id)"></ion-icon>
     </ion-item>
   </ion-list>
   <p class="ion-text-center" *ngIf="images.length <= 0">You haven't taken any pictures yet!</p>
